[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/BackgroundObjectsTitle.gd" type="Script" id=1]

[node name="Background" type="Node2D"]
script = ExtResource( 1 )

[node name="Sliders" type="Node2D" parent="."]
visible = false
z_index = 1

[node name="Controls" type="VBoxContainer" parent="Sliders"]
margin_left = 10.0
margin_top = 10.0
margin_right = 410.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FreqMin" type="HBoxContainer" parent="Sliders/Controls"]
margin_right = 400.0
margin_bottom = 16.0
alignment = 2

[node name="FreqMinL" type="Label" parent="Sliders/Controls/FreqMin"]
margin_left = 52.0
margin_top = 1.0
margin_right = 146.0
margin_bottom = 15.0
text = "Min Frequency"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FreqMin" type="HSlider" parent="Sliders/Controls/FreqMin"]
margin_left = 150.0
margin_right = 400.0
margin_bottom = 16.0
rect_min_size = Vector2( 250, 0 )
min_value = 0.05
max_value = 10.0
step = 0.05
value = 0.05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FreqMax" type="HBoxContainer" parent="Sliders/Controls"]
margin_top = 20.0
margin_right = 400.0
margin_bottom = 36.0
alignment = 2

[node name="FreqMaxL" type="Label" parent="Sliders/Controls/FreqMax"]
margin_left = 50.0
margin_top = 1.0
margin_right = 146.0
margin_bottom = 15.0
text = "Max Frequency"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FreqMax" type="HSlider" parent="Sliders/Controls/FreqMax"]
margin_left = 150.0
margin_right = 400.0
margin_bottom = 16.0
rect_min_size = Vector2( 250, 0 )
max_value = 10.0
step = 0.05
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer" type="HBoxContainer" parent="Sliders/Controls"]
margin_top = 40.0
margin_right = 400.0
margin_bottom = 40.0

[node name="Spacer2" type="HBoxContainer" parent="Sliders/Controls"]
margin_top = 44.0
margin_right = 400.0
margin_bottom = 44.0

[node name="xMinPos" type="HBoxContainer" parent="Sliders/Controls"]
margin_top = 48.0
margin_right = 400.0
margin_bottom = 64.0
alignment = 2

[node name="xMinPosL" type="Label" parent="Sliders/Controls/xMinPos"]
margin_left = 110.0
margin_top = 1.0
margin_right = 146.0
margin_bottom = 15.0
text = "Min X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="xMinPos" type="HSlider" parent="Sliders/Controls/xMinPos"]
margin_left = 150.0
margin_right = 400.0
margin_bottom = 16.0
rect_min_size = Vector2( 250, 0 )
min_value = -100.0
max_value = 1280.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="xMaxPos" type="HBoxContainer" parent="Sliders/Controls"]
margin_top = 68.0
margin_right = 400.0
margin_bottom = 84.0
alignment = 2

[node name="xMaxPosL" type="Label" parent="Sliders/Controls/xMaxPos"]
margin_left = 108.0
margin_top = 1.0
margin_right = 146.0
margin_bottom = 15.0
text = "Max X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="xMaxPos" type="HSlider" parent="Sliders/Controls/xMaxPos"]
margin_left = 150.0
margin_right = 400.0
margin_bottom = 16.0
rect_min_size = Vector2( 250, 0 )
min_value = -100.0
max_value = 1280.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yMinPos" type="HBoxContainer" parent="Sliders/Controls"]
margin_top = 88.0
margin_right = 400.0
margin_bottom = 104.0
alignment = 2

[node name="yMinPosL" type="Label" parent="Sliders/Controls/yMinPos"]
margin_left = 111.0
margin_top = 1.0
margin_right = 146.0
margin_bottom = 15.0
text = "Min Y"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yMinPos" type="HSlider" parent="Sliders/Controls/yMinPos"]
margin_left = 150.0
margin_right = 400.0
margin_bottom = 16.0
rect_min_size = Vector2( 250, 0 )
min_value = -100.0
max_value = 720.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yMaxPos" type="HBoxContainer" parent="Sliders/Controls"]
margin_top = 108.0
margin_right = 400.0
margin_bottom = 124.0
alignment = 2

[node name="yMaxPosL" type="Label" parent="Sliders/Controls/yMaxPos"]
margin_left = 109.0
margin_top = 1.0
margin_right = 146.0
margin_bottom = 15.0
text = "Max Y"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yMaxPos" type="HSlider" parent="Sliders/Controls/yMaxPos"]
margin_left = 150.0
margin_right = 400.0
margin_bottom = 16.0
rect_min_size = Vector2( 250, 0 )
min_value = -100.0
max_value = 720.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer3" type="HBoxContainer" parent="Sliders/Controls"]
margin_top = 128.0
margin_right = 400.0
margin_bottom = 128.0

[node name="Spacer4" type="HBoxContainer" parent="Sliders/Controls"]
margin_top = 132.0
margin_right = 400.0
margin_bottom = 132.0

[node name="xMinSpeed" type="HBoxContainer" parent="Sliders/Controls"]
margin_top = 136.0
margin_right = 400.0
margin_bottom = 152.0
alignment = 2

[node name="xMinSpeedL" type="Label" parent="Sliders/Controls/xMinSpeed"]
margin_left = 67.0
margin_top = 1.0
margin_right = 146.0
margin_bottom = 15.0
text = "Min X Speed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="xMinSpeed" type="HSlider" parent="Sliders/Controls/xMinSpeed"]
margin_left = 150.0
margin_right = 400.0
margin_bottom = 16.0
rect_min_size = Vector2( 250, 0 )
min_value = 1.0
max_value = 500.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="xMaxSpeed" type="HBoxContainer" parent="Sliders/Controls"]
margin_top = 156.0
margin_right = 400.0
margin_bottom = 172.0
alignment = 2

[node name="xMaxSpeedL" type="Label" parent="Sliders/Controls/xMaxSpeed"]
margin_left = 65.0
margin_top = 1.0
margin_right = 146.0
margin_bottom = 15.0
text = "Max X Speed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="xMaxSpeed" type="HSlider" parent="Sliders/Controls/xMaxSpeed"]
margin_left = 150.0
margin_right = 400.0
margin_bottom = 16.0
rect_min_size = Vector2( 250, 0 )
min_value = 1.0
max_value = 500.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yMinSpeed" type="HBoxContainer" parent="Sliders/Controls"]
margin_top = 176.0
margin_right = 400.0
margin_bottom = 192.0
alignment = 2

[node name="yMinSpeedL" type="Label" parent="Sliders/Controls/yMinSpeed"]
margin_left = 68.0
margin_top = 1.0
margin_right = 146.0
margin_bottom = 15.0
text = "Min Y Speed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yMinSpeed" type="HSlider" parent="Sliders/Controls/yMinSpeed"]
margin_left = 150.0
margin_right = 400.0
margin_bottom = 16.0
rect_min_size = Vector2( 250, 0 )
min_value = 1.0
max_value = 500.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yMaxSpeed" type="HBoxContainer" parent="Sliders/Controls"]
margin_top = 196.0
margin_right = 400.0
margin_bottom = 212.0
alignment = 2

[node name="yMaxSpeedL" type="Label" parent="Sliders/Controls/yMaxSpeed"]
margin_left = 66.0
margin_top = 1.0
margin_right = 146.0
margin_bottom = 15.0
text = "Max Y Speed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yMaxSpeed" type="HSlider" parent="Sliders/Controls/yMaxSpeed"]
margin_left = 150.0
margin_right = 400.0
margin_bottom = 16.0
rect_min_size = Vector2( 250, 0 )
min_value = 1.0
max_value = 500.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer5" type="HBoxContainer" parent="Sliders/Controls"]
margin_top = 216.0
margin_right = 400.0
margin_bottom = 216.0

[node name="Spacer6" type="HBoxContainer" parent="Sliders/Controls"]
margin_top = 220.0
margin_right = 400.0
margin_bottom = 220.0

[node name="xMinSize" type="HBoxContainer" parent="Sliders/Controls"]
margin_top = 224.0
margin_right = 400.0
margin_bottom = 240.0
alignment = 2

[node name="xMinSizeL" type="Label" parent="Sliders/Controls/xMinSize"]
margin_left = 80.0
margin_top = 1.0
margin_right = 146.0
margin_bottom = 15.0
text = "Min Width"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="xMinSize" type="HSlider" parent="Sliders/Controls/xMinSize"]
margin_left = 150.0
margin_right = 400.0
margin_bottom = 16.0
rect_min_size = Vector2( 250, 0 )
min_value = 1.0
max_value = 1280.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="xMaxSize" type="HBoxContainer" parent="Sliders/Controls"]
margin_top = 244.0
margin_right = 400.0
margin_bottom = 260.0
alignment = 2

[node name="xMaxSizeL" type="Label" parent="Sliders/Controls/xMaxSize"]
margin_left = 78.0
margin_top = 1.0
margin_right = 146.0
margin_bottom = 15.0
text = "Max Width"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="xMaxSize" type="HSlider" parent="Sliders/Controls/xMaxSize"]
margin_left = 150.0
margin_right = 400.0
margin_bottom = 16.0
rect_min_size = Vector2( 250, 0 )
min_value = 1.0
max_value = 1280.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer7" type="HBoxContainer" parent="Sliders/Controls"]
margin_top = 264.0
margin_right = 400.0
margin_bottom = 264.0

[node name="Spacer8" type="HBoxContainer" parent="Sliders/Controls"]
margin_top = 268.0
margin_right = 400.0
margin_bottom = 268.0

[node name="yMinSize" type="HBoxContainer" parent="Sliders/Controls"]
margin_top = 272.0
margin_right = 400.0
margin_bottom = 288.0
alignment = 2

[node name="yMinSizeL" type="Label" parent="Sliders/Controls/yMinSize"]
margin_left = 76.0
margin_top = 1.0
margin_right = 146.0
margin_bottom = 15.0
text = "Min Height"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yMinSize" type="HSlider" parent="Sliders/Controls/yMinSize"]
margin_left = 150.0
margin_right = 400.0
margin_bottom = 16.0
rect_min_size = Vector2( 250, 0 )
min_value = 1.0
max_value = 720.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yMaxSize" type="HBoxContainer" parent="Sliders/Controls"]
margin_top = 292.0
margin_right = 400.0
margin_bottom = 308.0
alignment = 2

[node name="yMaxSizeL" type="Label" parent="Sliders/Controls/yMaxSize"]
margin_left = 74.0
margin_top = 1.0
margin_right = 146.0
margin_bottom = 15.0
text = "Max Height"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yMaxSize" type="HSlider" parent="Sliders/Controls/yMaxSize"]
margin_left = 150.0
margin_right = 400.0
margin_bottom = 16.0
rect_min_size = Vector2( 250, 0 )
min_value = 1.0
max_value = 720.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer9" type="HBoxContainer" parent="Sliders/Controls"]
margin_top = 312.0
margin_right = 400.0
margin_bottom = 312.0

[node name="Spacer10" type="HBoxContainer" parent="Sliders/Controls"]
margin_top = 316.0
margin_right = 400.0
margin_bottom = 316.0

[node name="minColor1" type="HBoxContainer" parent="Sliders/Controls"]
margin_top = 320.0
margin_right = 400.0
margin_bottom = 336.0
alignment = 2

[node name="minColor1L" type="Label" parent="Sliders/Controls/minColor1"]
margin_left = 73.0
margin_top = 1.0
margin_right = 146.0
margin_bottom = 15.0
text = "Min Color 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="minColor1" type="HSlider" parent="Sliders/Controls/minColor1"]
margin_left = 150.0
margin_right = 400.0
margin_bottom = 16.0
rect_min_size = Vector2( 250, 0 )
max_value = 255.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="maxColor1" type="HBoxContainer" parent="Sliders/Controls"]
margin_top = 340.0
margin_right = 400.0
margin_bottom = 356.0
alignment = 2

[node name="maxColor1L" type="Label" parent="Sliders/Controls/maxColor1"]
margin_left = 71.0
margin_top = 1.0
margin_right = 146.0
margin_bottom = 15.0
text = "Max Color 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="maxColor1" type="HSlider" parent="Sliders/Controls/maxColor1"]
margin_left = 150.0
margin_right = 400.0
margin_bottom = 16.0
rect_min_size = Vector2( 250, 0 )
max_value = 255.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="minColor2" type="HBoxContainer" parent="Sliders/Controls"]
margin_top = 360.0
margin_right = 400.0
margin_bottom = 376.0
alignment = 2

[node name="minColor2L" type="Label" parent="Sliders/Controls/minColor2"]
margin_left = 73.0
margin_top = 1.0
margin_right = 146.0
margin_bottom = 15.0
text = "Min Color 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="minColor2" type="HSlider" parent="Sliders/Controls/minColor2"]
margin_left = 150.0
margin_right = 400.0
margin_bottom = 16.0
rect_min_size = Vector2( 250, 0 )
max_value = 255.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="maxColor2" type="HBoxContainer" parent="Sliders/Controls"]
margin_top = 380.0
margin_right = 400.0
margin_bottom = 396.0
alignment = 2

[node name="maxColor2L" type="Label" parent="Sliders/Controls/maxColor2"]
margin_left = 71.0
margin_top = 1.0
margin_right = 146.0
margin_bottom = 15.0
text = "Max Color 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="maxColor2" type="HSlider" parent="Sliders/Controls/maxColor2"]
margin_left = 150.0
margin_right = 400.0
margin_bottom = 16.0
rect_min_size = Vector2( 250, 0 )
max_value = 255.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="minColor3" type="HBoxContainer" parent="Sliders/Controls"]
margin_top = 400.0
margin_right = 400.0
margin_bottom = 416.0
alignment = 2

[node name="minColor3L" type="Label" parent="Sliders/Controls/minColor3"]
margin_left = 73.0
margin_top = 1.0
margin_right = 146.0
margin_bottom = 15.0
text = "Min Color 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="minColor3" type="HSlider" parent="Sliders/Controls/minColor3"]
margin_left = 150.0
margin_right = 400.0
margin_bottom = 16.0
rect_min_size = Vector2( 250, 0 )
max_value = 255.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="maxColor3" type="HBoxContainer" parent="Sliders/Controls"]
margin_top = 420.0
margin_right = 400.0
margin_bottom = 436.0
alignment = 2

[node name="maxColor3L" type="Label" parent="Sliders/Controls/maxColor3"]
margin_left = 71.0
margin_top = 1.0
margin_right = 146.0
margin_bottom = 15.0
text = "Max Color 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="maxColor3" type="HSlider" parent="Sliders/Controls/maxColor3"]
margin_left = 150.0
margin_right = 400.0
margin_bottom = 16.0
rect_min_size = Vector2( 250, 0 )
max_value = 255.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer11" type="HBoxContainer" parent="Sliders/Controls"]
margin_top = 440.0
margin_right = 400.0
margin_bottom = 440.0

[node name="Spacer12" type="HBoxContainer" parent="Sliders/Controls"]
margin_top = 444.0
margin_right = 400.0
margin_bottom = 444.0

[node name="minOpacity" type="HBoxContainer" parent="Sliders/Controls"]
margin_top = 448.0
margin_right = 400.0
margin_bottom = 464.0
alignment = 2

[node name="minOpacityL" type="Label" parent="Sliders/Controls/minOpacity"]
margin_left = 69.0
margin_top = 1.0
margin_right = 146.0
margin_bottom = 15.0
text = "Min Opacity"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="minOpacity" type="HSlider" parent="Sliders/Controls/minOpacity"]
margin_left = 150.0
margin_right = 400.0
margin_bottom = 16.0
rect_min_size = Vector2( 250, 0 )
min_value = 1.0
max_value = 255.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="maxOpacity" type="HBoxContainer" parent="Sliders/Controls"]
margin_top = 468.0
margin_right = 400.0
margin_bottom = 484.0
alignment = 2

[node name="maxOpacityL" type="Label" parent="Sliders/Controls/maxOpacity"]
margin_left = 67.0
margin_top = 1.0
margin_right = 146.0
margin_bottom = 15.0
text = "Max Opacity"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="maxOpacity" type="HSlider" parent="Sliders/Controls/maxOpacity"]
margin_left = 150.0
margin_right = 400.0
margin_bottom = 16.0
rect_min_size = Vector2( 250, 0 )
min_value = 1.0
max_value = 255.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control24" type="HBoxContainer" parent="Sliders/Controls"]
visible = false
margin_top = 480.0
margin_right = 400.0
margin_bottom = 496.0
alignment = 2

[node name="MaxWidthL" type="Label" parent="Sliders/Controls/Control24"]
margin_left = 78.0
margin_top = 1.0
margin_right = 146.0
margin_bottom = 15.0
text = "Max Width"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxWidth" type="HSlider" parent="Sliders/Controls/Control24"]
margin_left = 150.0
margin_right = 400.0
margin_bottom = 16.0
rect_min_size = Vector2( 250, 0 )
min_value = 1.0
max_value = 200.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}
